# 2025CGProjectFireworks

./: .gitignore  CMakeLists.txt
include/: audio.h  camera.h  fbo.h  firework.h  ground.h  light.h  mesh.h  model.h  particle.h  particle_system.h  post_processing.h  shader.h  skybox.h  tree.h  utils.h
model/source/: combined02.mtl
shaders/: bloom.frag  blur.frag  brightness.frag  ground.frag  ground.vert  model.frag  model.vert  particle.frag  particle.vert  particle_trail.frag  particle_trail.vert  rocket.frag  rocket.vert  skybox.frag  skybox.vert  tree.frag  tree.vert
src/: ConsoleApplication1.vcxproj  ConsoleApplication1.vcxproj.filters  audio.cpp  camera.cpp  fbo.cpp  firework.cpp  glad.c  ground.cpp  main.cpp  mesh.cpp  model.cpp  particle.cpp  particle_system.cpp  post_processing.cpp  shader.cpp  skybox.cpp  tree.cpp  utils.cpp
